--- a/package.json
+++ b/package.json
@@ -81,7 +81,7 @@
     "vitest": "^0.8.2"
   },
   "engines": {
-    "node": ">=14"
+    "node": "16.14.2"
   },
   "prisma": {
     "seed": "ts-node --require tsconfig-paths/register prisma/seed.ts"
